<belarusian> language add words

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -200,96 +200,96 @@
     <string name="change_password">Змяніць пароль</string>
     <string name="change_email">Змяніць емэйл</string>
     <string name="delete_account">Выдаліць акаўнт</string>
-    <string name="retry">Retry</string>
-    <string name="result">Result</string>
-    <string name="in_the_past_have_you">In the past have you</string>
-    <string name="tried_hard_not_to_think_about_the_events_or_went_out_of_your_way_to_avoid_situations_that_reminded_you_of_the_events">Tried hard not to think about the events or went out of your way to avoid situations that reminded you of the events</string>
-    <string name="have_you_ever_experienced_this_kind_of_event">Have you ever experienced this kind of event?</string>
-    <string name="sometimes_things_happen_to_people_that_are_unusually_or_especially_frightening_horrible_or_traumatic_for_example">Sometimes things happen to people that are unusually or especially frightening horrible or traumatic for example:</string>
-    <string name="a_serious_accident_or_fires">A serious accident or fires</string>
-    <string name="a_physical_or_sexual_assault">A physical or sexual assault</string>
-    <string name="an_earthquake_or_flood">An earthquake or flood</string>
-    <string name="a_war">A war</string>
-    <string name="seeing_someone_be_killed_or_seriously_injured">Seeing someone be killed or seriously injured</string>
-    <string name="having_a_loved_one_die_through_homicide_and_suicide">Having a loved one die through homicide and suicide</string>
-    <string name="attention_deficit_hyperactivity_disorder">Attention deficit hyperactivity disorder</string>
-    <string name="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems">Over the last 2 weeks how often have you been bothered by the following problems:</string>
-    <string name="feeling_nervous_anxious_or_on_edge">Feeling nervous anxious or on edge</string>
-    <string name="not_at_all_sure">Not at all sure</string>
-    <string name="several_days">Several days</string>
-    <string name="over_half_the_days">Over half the days</string>
-    <string name="nearly_every_day">Nearly every day</string>
-    <string name="bipolar_disorder">Bipolar disorder</string>
-    <string name="not_at_all">Not at all</string>
-    <string name="obsessive_compulsive_disorder">Obsessive compulsive disorder</string>
-    <string name="adhd1">1. How often do you have trouble wrapping up the final details of a project, once the challenging parts have been done?</string>
-    <string name="adhd2">2. How often do you have difficulty getting things in order when you have to do a task that requires organization?</string>
-    <string name="adhd3">3. How often do you have problems remembering appointments or obligations?</string>
-    <string name="adhd4">4. When you have a task that requires a lot of thought, how often do you avoid or delay getting started?</string>
-    <string name="adhd5">5. How often do you fidget or squirm with your hands or feet when you have to sit down for a long time?</string>
-    <string name="adhd6">6. How often do you feel overly active and compelled to do things, like you were driven by a motor?</string>
-    <string name="never">Never</string>
-    <string name="rarely">Rarely</string>
-    <string name="sometimes">Sometimes</string>
-    <string name="often">Often</string>
-    <string name="very_often">Very Often</string>
-    <string name="anxiexty1">1. Feeling nervous, anxious, or on edge</string>
-    <string name="anxiexty2">2. Not being able to stop or control worrying</string>
-    <string name="anxiexty3">3. Worrying too much about different things</string>
-    <string name="anxiexty4">4. Trouble relaxing</string>
-    <string name="anxiexty5">5. Being so restless that it\'s hard to sit still</string>
-    <string name="anxiexty6">6. Becoming easily annoyed or Irritable</string>
-    <string name="anxiexty7">7. Feeling afraid as if something awful might happen</string>
-    <string name="depression1">1. Little interest or pleasure in doing things</string>
-    <string name="depression2">2. Feeling down, depressed, or hopeless</string>
-    <string name="depression3">3. Trouble falling or staying asleep, or sleeping too much</string>
-    <string name="depression4">4. Feeling tired or having little energy</string>
-    <string name="depression5">5. Poor appetite or overeating</string>
-    <string name="depression6">6. Feeling bad about yourself – or that you are a failure or have let yourself or your family down</string>
-    <string name="depression7">7. Trouble concentrating on things, such as reading the newspaper or watching television</string>
-    <string name="depression8">8. Moving or speaking so slowly that other people could have noticed? Or the opposite – being so fidgety or restless that you have been moving around a lot more than usual</string>
-    <string name="depression9">9. Thoughts that you would be better off dead or of hurting yourself in some way</string>
-    <string name="ptsd1">Had nightmares about the event(s) or thought about the event(s) when you did not want to?</string>
-    <string name="ptsd2">Tried hard not to think about the event(s) or went out of your way to avoid situations that reminded you of the event(s)?</string>
-    <string name="ptsd3">Been constantly on guard, watchful, or easily startled?</string>
-    <string name="ptsd4">Felt numb or detached from people, activities, or your surroundings?</string>
-    <string name="ptsd5">Felt guilty or unable to stop blaming yourself or others for the event(s) or any problems the event(s) may have caused?</string>
-    <string name="ocd1">1. I have saved up so many things that they get in the way.</string>
-    <string name="ocd2">2. I check things more often than necessary.</string>
-    <string name="ocd3">3. I get upset if objects are not arranged properly.</string>
-    <string name="ocd4">4. I feel compelled to count while I am doing things.</string>
-    <string name="ocd5">5. I find it difficult to touch an object when I know it has been touched by strangers or certain people.</string>
-    <string name="ocd6">6. I find it difficult to control my own thoughts.</string>
-    <string name="ocd7">7. I collect things I don’t need.</string>
-    <string name="ocd8">8. I repeatedly check doors, windows, drawers, etc.</string>
-    <string name="ocd9">9. I get upset if others change the way I have arranged things.</string>
-    <string name="ocd10">10. I feel I have to repeat certain numbers.</string>
-    <string name="ocd11">11. I sometimes have to wash or clean myself simply because I feel contaminated.</string>
-    <string name="ocd12">12. I am upset by unpleasant thoughts that come into my mind against my will.</string>
-    <string name="ocd13">13. I avoid throwing things away because I am afraid I might need them later.</string>
-    <string name="ocd14">14. I repeatedly check gas and water taps and light switches after turning them off.</string>
-    <string name="ocd15">15. I need things to be arranged in a particular way.</string>
-    <string name="ocd16">16. I feel that there are good and bad numbers.</string>
-    <string name="ocd17">17. I wash my hands more often and longer than necessary.</string>
-    <string name="ocd18">18. I frequently get nasty thoughts and have difficulty in getting rid of them.</string>
-    <string name="a_little">A little"</string>
-    <string name="moderately">Moderately</string>
-    <string name="a_lot">A lot</string>
-    <string name="extremely">Extremely</string>
-    <string name="bip1">1. At times I am much more talkative or speak much faster than usual.</string>
-    <string name="bip2">2. There have been times when I was much more active or did many more things than usual.</string>
-    <string name="bip3">3. I get into moods where I feel very speeded up or irritable.</string>
-    <string name="bip4">4. There have been times when I have felt both high (elated) and low (depressed) at the same time.</string>
-    <string name="bip5">5. At times I have been much more interested in sex than usual.</string>
-    <string name="bip6">6. My self-confidence ranges from great self- doubt to equally great overconfidence.</string>
-    <string name="bip7">7. There have been GREAT variations in the quantity or quality of my work.</string>
-    <string name="bip8">8. For no apparent reason I sometimes have been VERY angry or hostile.</string>
-    <string name="bip9">9. I have periods of mental dullness and other periods of very creative thinking.</string>
-    <string name="bip10">10. At times I am greatly interested in being with people and at other times I just want to be left alone with my thoughts.</string>
-    <string name="bip11">11. I have had periods of great optimism and other periods of equally great pessimism.</string>
-    <string name="bip12">12. I have had periods of tearfulness and crying and other times when I laugh and joke excessively.</string>
-    <string name="somewhat">Somewhat</string>
-    <string name="quite_a_lot">Quite a lot</string>
-    <string name="very_much">Very much</string>
+    <string name="retry">Яшчэ раз</string>
+    <string name="result">Вынік</string>
+    <string name="in_the_past_have_you">У мінулым ты:</string>
+    <string name="tried_hard_not_to_think_about_the_events_or_went_out_of_your_way_to_avoid_situations_that_reminded_you_of_the_events">Стараўся не думаць пра падзеі або рабіў усё магчымае, каб пазбегнуць сітуацый, якія нагадваюць табе пра падзеіs</string>
+    <string name="have_you_ever_experienced_this_kind_of_event">Ты калі-небудзь сутыкаўся з падобнай падзеяй?</string>
+    <string name="sometimes_things_happen_to_people_that_are_unusually_or_especially_frightening_horrible_or_traumatic_for_example">Часам з людзьмі здараюцца рэчы, якія незвычайна або асабліва палохаюць, жудасныя або траўматычныя, напрыклад:</string>
+    <string name="a_serious_accident_or_fires">Сур\'ёзная аварыя або пажар</string>
+    <string name="a_physical_or_sexual_assault">Фізічны або сексуальны гвалт</string>
+    <string name="an_earthquake_or_flood">Землятрус або паводка</string>
+    <string name="a_war">Вайна</string>
+    <string name="seeing_someone_be_killed_or_seriously_injured">Бачыў, як хтосьці быў забіты або сур\'ёзна паранены</string>
+    <string name="having_a_loved_one_die_through_homicide_and_suicide">Перажыў смерць любімага чалавека ў выніку забойства ці самагубства</string>
+    <string name="attention_deficit_hyperactivity_disorder">Дэфіцыт увагі і гіперактыўнасці</string>
+    <string name="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems">Як часта за апошнія 2 тыдні цябе турбавалі наступныя праблемы:</string>
+    <string name="feeling_nervous_anxious_or_on_edge">Адчуванне нервовай трывогі або напружання</string>
+    <string name="not_at_all_sure">Зусім не ўпэўнены</string>
+    <string name="several_days">Некалькі дзён</string>
+    <string name="over_half_the_days">Больш за палову дзён</string>
+    <string name="nearly_every_day">Амаль кожны дзень</string>
+    <string name="bipolar_disorder">Біпалярнае растройства (БАР)</string>
+    <string name="not_at_all">Зусім не</string>
+    <string name="obsessive_compulsive_disorder">Абсэсіўна-кампульсіўнае расстройства</string>
+    <string name="adhd1">1. Як часта ў цябе ўзнікаюць праблемы з завяршэннем апошніх дэталяў праекта пасля выканання складаных частак?</string>
+    <string name="adhd2">2. Як часта ў цябе ўзнікаюць цяжкасці з канцэнтрацыяй, калі трэба выканаць задачу, якая патрабуе арганізацыі?</string>
+    <string name="adhd3">3. Як часта ў цябе ўзнікаюць праблемы з запамінаннем сустрэч або абавязкаў?</string>
+    <string name="adhd4">4. Калі ў цябе ёсць задача, якая патрабуе шмат высілкаў, як часта ты пазбягаеш яе або адкладаеш пачатак?</string>
+    <string name="adhd5">5. Як часта ты круціш рукамі ці нагамі, калі даводзіцца доўга сядзець?</string>
+    <string name="adhd6">6. Як часта ты адчуваеш сябе празмерна актыўным і вымушаным рабіць што-небудзь, быццам табою нешта рухае?</string>
+    <string name="never">Ніколі</string>
+    <string name="rarely">Рэдка</string>
+    <string name="sometimes">Часам</string>
+    <string name="often">Часта</string>
+    <string name="very_often">Вельмі часта</string>
+    <string name="anxiexty1">1. Пачуццё нервовасці, трывогі або напружання</string>
+    <string name="anxiexty2">2. Немагчымасць спыніць або кантраляваць неспакой</string>
+    <string name="anxiexty3">3. Занадта шмат клопатаў пра розныя рэчы</string>
+    <string name="anxiexty4">4. Праблемы з расслабленнем</string>
+    <string name="anxiexty5">5. Быць настолькі неспакойным, што цяжка сядзець на месцы</string>
+    <string name="anxiexty6">6. Лёгка раздражнёны або раздражняльны</string>
+    <string name="anxiexty7">7. Адчуванне страху, быццам можа здарыцца нешта жудаснае</string>
+    <string name="depression1">1. Мала цікавасці або задавальнення ў выкананні заданняў</string>
+    <string name="depression2">2. Пачуццё прыгнечанасці, дэпрэсіі або безнадзейнасці</string>
+    <string name="depression3">3. Праблемы з засынаннем або сноў </string>
+    <string name="depression4">4. Адчуванне стомленасці або мала энергіі</string>
+    <string name="depression5">5. Дрэнны апетыт або пераяданне</string>
+    <string name="depression6">6. Адчуванне сябе дрэнным - што ты няўдачнік, падвёў сябе ці сваю сям\'ю</string>
+    <string name="depression7">7. Праблемы з канцэнтрацыяй на рэчах, такіх як чытанне газеты або прагляд тэлевізара</string>
+    <string name="depression8">8. Рухаўся або гаворыў так павольна, што іншыя людзі гэта заўважалі? Ці наадварот - быў настолькі мітуслівым або неспакойным, што рухаўся нашмат больш, чым звычайна</string>
+    <string name="depression9">9. Думкі пра тое, што лепш памерці або пашкодзіць сябе нейкім чынам</string>
+    <string name="ptsd1">Табе сніліся кашмары пра падзею(-і) або ты думаў пра падзею(-і), калі табе гэтага не хацелася?</string>
+    <string name="ptsd2">Ты з усіх сіл стараўся не думаць пра падзею(-і) або рабіў ўсё магчымае, каб пазбегнуць сітуацый, якія нагадваюць пра гэта?</string>
+    <string name="ptsd3">Ты ўвесь час быў пільным ці лёгка палохаўся?</string>
+    <string name="ptsd4">Адчуваеш здранцвенне або адарванасць ад людзей, заняткаў або навакольнага асяроддзя?</string>
+    <string name="ptsd5">Адчуваеш сябе вінаватым або не можаш перастаць вінаваціць сябе ці іншых у падзеі(ях) або ў праблемах, якія магла выклікаць падзея(і)?</string>
+    <string name="ocd1">1. Я назапасіў так шмат рэчаў, што яны мне перашкаджаюць.</string>
+    <string name="ocd2">2. Я правяраю рэчы часцей, чым трэба.</string>
+    <string name="ocd3">3. Я засмучваюся, калі прадметы расстаўлены няправільна.</string>
+    <string name="ocd4">4. Я мушу лічыць, пакуль раблю што-небудзь.</string>
+    <string name="ocd5">5. Мне цяжка дакрануцца да прадмета, калі я ведаю, што да яго дакраналіся незнаёмцы або пэўныя людзі.</string>
+    <string name="ocd6">6. Мне цяжка кантраляваць уласныя думкі.</string>
+    <string name="ocd7">7. Я збіраю непатрэбныя рэчы.</string>
+    <string name="ocd8">8. Я неаднаразова правяраю дзверы, вокны, скрыні і г.д.</string>
+    <string name="ocd9">9. Я засмучваюся, калі іншыя мяняюць тое, як я расставіў рэчы.</string>
+    <string name="ocd10">10. Я адчуваю, што павінен паўтарыць пэўныя лічбы.</string>
+    <string name="ocd11">11. Мне часам даводзіцца мыцца або прыбірацца проста таму, што адчуваю сябе брудным.</string>
+    <string name="ocd12">12. Мяне засмучаюць непрыемныя думкі, якія прыходзяць мне ў галаву супраць маёй волі.</string>
+    <string name="ocd13">13. Я пазбягаю выкідваць рэчы, таму што баюся, што яны мне могуць спатрэбіцца пазней.</string>
+    <string name="ocd14">14. Я неаднаразова правяраю газавыя і водаправодныя краны і выключальнікі святла пасля іх выключэння.</string>
+    <string name="ocd15">15. Мне трэба, каб рэчы былі размешчаны асаблівым чынам.</string>
+    <string name="ocd16">16. Я адчуваю, што ёсць добрыя і дрэнныя лічбы.</string>
+    <string name="ocd17">17. Я мыю рукі часцей і даўжэй, чым трэба.</string>
+    <string name="ocd18">18. Мне часта прыходзяць непрыемныя думкі, і мне цяжка ад іх пазбавіцца.</string>
+    <string name="a_little">Трохі</string>
+    <string name="moderately">Сярэдне</string>
+    <string name="a_lot">Шмат</string>
+    <string name="extremely">Надзвычайна</string>
+    <string name="bip1">1. Часам я значна больш гаваркі або размаўляю значна хутчэй, чым звычайна.</string>
+    <string name="bip2">2. Былі моманты, калі я быў значна больш актыўны або рабіў значна больш спраў, чым звычайна.</string>
+    <string name="bip3">3. У мяне ўзнікае настрой, калі я адчуваю сябе вельмі ўсхваляваным або раздражнёным.</string>
+    <string name="bip4">4. Былі моманты, калі я адначасова адчуваў сябе ўзнёсла (узбуджана) і прыгнечана (дэпрэсіўна).</string>
+    <string name="bip5">5. Часам я быў значна больш зацікаўлены ў сексе, чым звычайна.</string>
+    <string name="bip6">6. Мая ўпэўненасць у сабе вагаецца ад моцнай няўпэўненасці да такой жа вялікай залішняй самаўпэўненасці.</string>
+    <string name="bip7">7. Былі ВЯЛІКІЯ змены ў колькасці і якасці маёй працы.</string>
+    <string name="bip8">8. Без бачных прычын я часам быў ВЕЛЬМІ злы або варожы.</string>
+    <string name="bip9">9. У мяне бываюць перыяды разумовай тупасці і  перыяды вельмі творчага мыслення.</string>
+    <string name="bip10">10. Часам мне вельмі цікава быць з людзьмі, а часам я проста хачу застацца сам-насам са сваімі думкамі.</string>
+    <string name="bip11">11. У мяне былі перыяды вялікага аптымізму і перыяды вялікага песімізму.</string>
+    <string name="bip12">12. У мяне бывалі перыяды плачу, а таксама моманты, калі я празмерна смяяўся і жартаваў.</string>
+    <string name="somewhat">Збольшага</string>
+    <string name="quite_a_lot">Даволі шмат</string>
+    <string name="very_much">Вельмі</string>
 
 </resources>
