--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -314,4 +314,5 @@
     <string name="breath">Дыхай</string>
     <string name="out_of">з</string>
     <string name="good_job">Малайчына!</string>
+    <string name="meds">Лекі</string>
 </resources>
