--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -314,4 +314,5 @@
     <string name="breath">Breath</string>
     <string name="out_of">out of</string>
     <string name="good_job">Good job</string>
+    <string name="meds">Meds</string>
 </resources>
