--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -315,4 +315,8 @@
     <string name="out_of">out of</string>
     <string name="good_job">Good job</string>
     <string name="meds">Meds</string>
+    <string name="empty_field">Field can\'t be empty</string>
+    <string name="range">Please enter in range</string>
+    <string name="positive_number">Please enter a positive number</string>
+    <string name="pause">Pause</string>
 </resources>
