--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -195,7 +195,7 @@
     <string name="Breathe">Дыханне</string>
     <string name="Other">Іншае</string>
     <string name="Meditate">Медытацыя</string>
-    <string name="choose_language">Змяеніць мову</string>
+    <string name="choose_language">Змяніць мову</string>
     <string name="change_password">Змяніць пароль</string>
     <string name="change_email">Змяніць емэйл</string>
     <string name="delete_account">Выдаліць акаўнт</string>
@@ -319,4 +319,6 @@
     <string name="range">Калі ласка, увядзі дыяпазон</string>
     <string name="positive_number">Калі ласка, увядзі станоўчы лік</string>
     <string name="pause">Паўза</string>
+    <string name="exit">Ты ўпэўнены, што хочаш выйсці?</string>
+    <string name="delete_user_successfully">Карыстальнік паспяхова выдалены,</string>
 </resources>
