--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -319,4 +319,6 @@
     <string name="range">Please enter in range</string>
     <string name="positive_number">Please enter a positive number</string>
     <string name="pause">Pause</string>
+    <string name="exit">Are you sure you want to sign out?</string>
+    <string name="delete_user_successfully">Deleted User Successfully,</string>
 </resources>
