<belarusian> language add words

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -326,4 +326,12 @@
     <string name="current_password">Актуальны пароль</string>
     <string name="new_password">Новы пароль</string>
     <string name="repeat_password">Паўтары пароль</string>
+    <string name="add_appointment">Add Appointment</string>
+    <string name="doctor_s_name">Doctor\'s Name</string>
+    <string name="select_date">Select Date</string>
+    <string name="add">ADD</string>
+    <string name="your_appointments">Your Appointments</string>
+    <string name="no_appointments">No Appointments</string>
+    <string name="your_lab_tests">Your Lab Tests</string>
+    <string name="no_lab_tests">No Lab Tests</string>
 </resources>
