--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -334,4 +334,6 @@
     <string name="no_appointments">No Appointments</string>
     <string name="your_lab_tests">Your Lab Tests</string>
     <string name="no_lab_tests">No Lab Tests</string>
+    <string name="added">Added</string>
+    <string name="connection">Check you internet connection</string>
 </resources>
