--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -336,4 +336,5 @@
     <string name="no_lab_tests">No Lab Tests</string>
     <string name="added">Added</string>
     <string name="connection">Check you internet connection</string>
+    <string name="no_notes">No Notes</string>
 </resources>
