<version new> xml fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -317,4 +317,8 @@
     <string name="added">Added</string>
     <string name="connection">Check you internet connection</string>
     <string name="no_notes">No Notes</string>
+    <string name="plus">+</string>
+    <string name="_00_00">00:00</string>
+    <string name="_1">1</string>
+    <string name="submit_here">Submit Here</string>
 </resources>
