--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -317,4 +317,8 @@
     <string name="added">Дададзена</string>
     <string name="connection">Правер інтэрнэт злучэнне</string>
     <string name="no_notes">Няма апісання</string>
+    <string name="plus">+</string>
+    <string name="_00_00">00:00</string>
+    <string name="_1">1</string>
+    <string name="submit_here">Submit Here</string>
 </resources>
