--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -316,4 +316,8 @@
     <string name="added">Dodano</string>
     <string name="connection">Sprawdź połączenie internetowe</string>
     <string name="no_notes">Brak notatek</string>
+    <string name="plus">+</string>
+    <string name="_00_00">00:00</string>
+    <string name="_1">1</string>
+    <string name="submit_here">Submit Here</string>
 </resources>
