<version new> fixed

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -320,5 +320,5 @@
     <string name="plus">+</string>
     <string name="_00_00">00:00</string>
     <string name="_1">1</string>
-    <string name="submit_here">Submit Here</string>
+    <string name="submit_here">Ok</string>
 </resources>
